--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "private": false,
   "dependencies": {
-    "axios": "^0.26.1"
+    "axios": "^0.26.1",
+    "moment": "^2.29.2"
   }
 }
