--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sncf_module",
-  "version": "1.0.0",
+  "name": "sncf.js",
+  "version": "0.1.0",
   "description": "An easy to use javascript module to get all the information in real time about the trains ©SNCF (only in France)\n\nUnder development",
   "main": "index.js",
   "scripts": {
@@ -9,9 +9,17 @@
   "keywords": [],
   "author": "Alexis06030631",
   "license": "ISC",
-  "private": false,
+  "private": true,
   "dependencies": {
     "axios": "^0.26.1",
     "moment": "^2.29.2"
+  },
+  "homepage": "https://github.com/Alexis06030631/SNCF.js/#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Alexis06030631/SNCF.js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Alexis06030631/SNCF.js/issues"
   }
 }
