--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An easy to use javascript module to get all the information in real time about the trains ©SNCF (only in France)\n\nUnder development",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./workflows/index"
   },
   "keywords": [],
   "author": "Alexis06030631",
