--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,10 +13,9 @@ jobs:
           node-version: 16.x
       - name: download deps
         run: npm ci
-      - name: Create env file
-        run: |
-          touch .env
-          echo SNCF_TOKEN=${{secrets.SNCF_TOKEN}} >> .env
+      - name: Set token
+        env:
+          SNCF_TOKEN: ${{ secrets.SNCF_TOKEN }}
 
       - name: test run
         run: npm test
