--- a/.github/workflows/deploy_module.yml
+++ b/.github/workflows/deploy_module.yml
@@ -8,12 +8,12 @@ on:
       - completed
 
 jobs:
-  test:
+  update-deps:
+    name: Update node module
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: neverendingqs/gh-action-node-update-deps@master
-      - name: Update node module
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
