--- a/.github/workflows/deploy_module.yml
+++ b/.github/workflows/deploy_module.yml
@@ -14,6 +14,9 @@ jobs:
           node-version: 10
       - run: npm install
       - run: npm test
+        env:
+          CI: true
+          SNCF_TOKEN: ${{ secrets.SNCF_TOKEN }}
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
