--- a/.github/workflows/deploy_module.yml
+++ b/.github/workflows/deploy_module.yml
@@ -11,12 +11,14 @@ jobs:
       CI: true
       SNCF_TOKEN: ${{ secrets.SNCF_TOKEN }}
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 10
-      - run: npm install
-      - run: npm test
+          node-version: 16.x
+      - name: download deps
+        run: npm ci
+      - name: test run
+        run: npm test
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
