--- a/.github/workflows/deploy_module.yml
+++ b/.github/workflows/deploy_module.yml
@@ -11,6 +11,9 @@ jobs:
       CI: true
       SNCF_TOKEN: ${{ secrets.SNCF_TOKEN }}
     steps:
+      - name: Check if version has been updated
+        id: check
+        uses: EndBug/version-check@v1
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
@@ -19,6 +22,7 @@ jobs:
         run: npm ci
       - name: test run
         run: npm test
+      - name: Update module
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
