--- a/.github/workflows/check_incr_v.yml
+++ b/.github/workflows/check_incr_v.yml
@@ -20,4 +20,6 @@ jobs:
 
       - name: Log when unchanged
         if: steps.check.outputs.changed == 'false'
-        run: 'echo "No version change :/"'
+        run: |
+          'echo "No version change :/"'
+          'exit 1'
