--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "An easy to use javascript module to get all the information in real time about the trains ©SNCF (only in France)",
   "main": "index.js",
   "scripts": {
-    "test": "node ./workflows/index"
+    "test": "node ./workflows/index",
+    "build_docs": "retype build",
+    "dev_docs": "retype watch"
   },
   "keywords": [
     "SNCF",
