--- a/.github/workflows/documentation_build.yml
+++ b/.github/workflows/documentation_build.yml
@@ -1,5 +1,6 @@
 name: Publish SNCF.JS website to GitHub
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -12,8 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
       - uses: actions/setup-dotnet@v1
         with:
