--- a/.github/workflows/test_module.yml
+++ b/.github/workflows/test_module.yml
@@ -1,9 +1,10 @@
 name: test module
 on:
+  pull_request:
   push:
     branches-ignore:
-      - main
       - prepare/V2
+      - dist
 
 jobs:
   test:
