--- a/retype.yml
+++ b/retype.yml
@@ -1,6 +1,6 @@
 input: ./docs/
 output: ./docs/build/
-url: github.com/Alexis06030631/sncf.js
+url: github.com/SNCF.js
 branding:
   logo: static/sncf-logo_dark.png
   logoDark: static/sncf-logo.png
@@ -8,22 +8,22 @@ branding:
 meta:
   title: ' - SNCF.JS a javascript library'
 edit:
-  repo: github.com/Alexis06030631/sncf.js/
+  repo: github.com/Alexis06030631/SNCF.js/
   base: /docs
 links:
   - text: Home
     link: /README.md
     icon: home
   - text: Issues
-    link: https://github.com/Alexis06030631/sncf.js/issues
+    link: https://github.com/Alexis06030631/SNCF.js/issues
     icon: issue-opened
     target: blank
   - text: Discussions
-    link: https://github.com/Alexis06030631/sncf.js/discussions
+    link: https://github.com/Alexis06030631/SNCF.js/discussions
     icon: comment-discussion
     target: blank
   - text: Github
-    link: https://github.com/Alexis06030631/sncf.js
+    link: https://github.com/Alexis06030631/SNCF.js
     icon: mark-github
     target: blank
 footer:
