--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "private": false,
   "dependencies": {
     "axios": "^0.26.1",
+    "chalk": "^5.0.1",
+    "cli-color": "^2.0.3",
     "dotenv": "^16.0.1",
     "gitlog": "^4.0.4",
     "glob": "^8.0.3",
