--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "nodemon": "^2.0.19"
   },
-  "homepage": "https://github.com/Alexis06030631/SNCF.js/#readme",
+  "homepage": "alexis06030631.github.io/sncf.js/",
   "repository": {
     "type": "git",
     "url": "https://github.com/Alexis06030631/SNCF.js.git"
