--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\"",
     "dev": "nodemon test.js",
     "update_doc_data": "node ./.github/action/update_version.js",
-    "build_docs": "node ./.github/action/update_version.js && retype build --override \"{ \"version\": $npm_package_version }\"",
+    "build_docs": "node ./.github/action/update_version.js && retype build",
     "dev_docs": "node ./.github/action/update_version.js && retype watch"
   },
   "keywords": [
