--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,24 @@
 {
+  "$schema": "http://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "declaration": true,
     "target": "es6",
+    "forceConsistentCasingInFileNames": true,
     "module": "commonjs",
-    "noImplicitAny": true,
+    "declaration": true,
+    "sourceMap": true,
+    "declarationMap": true,
+    "experimentalDecorators": true,
+    "strictNullChecks": true,
+    "esModuleInterop": true,
+    "types": ["node"],
     "outDir": "dist",
     "rootDir": "./src/",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "resolveJsonModule": true,
-    "esModuleInterop": true
+    "resolveJsonModule": true
   },
+  "include": [
+    "src/*.ts",
+    "src/**/*.ts",
+  ],
   "exclude": [
     "dist",
     "node_modules"
