--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sncf.js",
-	"version": "2.4.5",
+	"version": "2.4.8",
 	"description": "An easy to use javascript module to get all the information in real time about the trains ©SNCF (only in France)",
 	"scripts": {
 		"test": "nodemon test.js --watch test.js --watch dist",
@@ -26,11 +26,11 @@
 	"author": "Alexis06030631",
 	"license": "ISC",
 	"dependencies": {
-		"axios": "^0.26.1"
+		"axios": "1.6.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20.1.0",
-		"nodemon": "^2.0.22",
+		"nodemon": "^3.1.0",
 		"typescript": "^5.0.4",
 		"vitepress": "^1.0.0-beta.3"
 	},
